Revise job experience and date format in index.html
Updated job experience details and date format.

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
 
       <div class="card">
         <h3>Data Scientist (Alternance) — Diot-Siaci, Paris</h3>
-        <span class="date">Sept. 2025 – Aujourd’hui</span>
+        <span class="date">09/2025 – Aujourd’hui</span>
         <ul>
-          <li>Développement d'une <strong>application d'analyse de verbatims clients</strong> avec Snowflake Cortex (IA générative) : nettoyage, clustering thématique, analyse de sentiment, interface Streamlit pour les métiers</li>
           <li>Préparation et structuration de données multi-sources (SQL, Python)</li>
-          <li>Analyse exploratoire (EDA) et développement de modèles ML (régression, classification)</li>
-          <li>Création de dashboards décisionnels (Power BI) et accompagnement sur des cas d'usage IA générative</li>
+          <li>Analyse exploratoire (EDA) et détection de patterns</li>
+          <li>Développement de modèles ML (régression, classification)</li>
+          <li><strong>Développement d'une application d'analyse de verbatims clients avec Snowflake Cortex (IA générative)</strong> : nettoyage, clustering thématique, analyse de sentiment, interface Streamlit pour les métiers</li>
+          <li>Création de dashboards décisionnels (Power BI)</li>
+          <li>Accompagnement sur des cas d’usage IA générative</li>
         </ul>
       </div>
 
